feat(core-runtime): 엔진 골격과 결정론 샌드박스 추가

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "build": "node -e \"console.log('build placeholder')\"",
-    "test": "node --test src/__tests__/*.test.mjs",
+    "test": "node --test src/__tests__/*.test.mjs src/runtime/__tests__/*.test.mjs",
     "lint": "node -e \"console.log('lint placeholder')\""
   }
 }
