--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,12 +5,15 @@
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "dependencies": {
+    "zod": "^4.1.5"
+  },
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "node -e \"console.log('build placeholder')\"",
-    "test": "node --test src/__tests__/*.test.mjs src/runtime/__tests__/*.test.mjs",
-    "lint": "node -e \"console.log('lint placeholder')\""
+    "build": "tsc -p tsconfig.json",
+    "test": "vitest run",
+    "lint": "tsc -p tsconfig.json --noEmit"
   }
 }
