feat(cli): run/watch/coverage 명령과 테스트 추가

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -7,8 +7,8 @@
     "lunatest": "./dist/index.js"
   },
   "scripts": {
-    "build": "node -e \"console.log('build placeholder')\"",
-    "test": "node -e \"console.log('no tests yet')\"",
-    "lint": "node -e \"console.log('lint placeholder')\""
+    "build": "tsc -p tsconfig.json",
+    "test": "vitest run",
+    "lint": "tsc -p tsconfig.json --noEmit"
   }
 }
