feat(react): LunaProvider 훅 어댑터와 테스트 추가

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -8,9 +8,18 @@
   "files": [
     "dist"
   ],
+  "dependencies": {
+    "@lunatest/core": "workspace:*",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1"
+  },
   "scripts": {
-    "build": "node -e \"console.log('build placeholder')\"",
-    "test": "node -e \"console.log('no tests yet')\"",
-    "lint": "node -e \"console.log('lint placeholder')\""
+    "build": "tsc -p tsconfig.json",
+    "test": "vitest run",
+    "lint": "tsc -p tsconfig.json --noEmit"
   }
 }
