chore(gates): 성능 측정 산출물 추적 제외

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 node_modules/
 dist/
 .turbo/
+scripts/perf-current.json
+scripts/perf-current-absolute.json
+scripts/perf-current.json
+scripts/perf-current-absolute.json
