--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -10,5 +10,8 @@
     "build": "tsc -p tsconfig.json",
     "test": "vitest run",
     "lint": "tsc -p tsconfig.json --noEmit"
+  },
+  "dependencies": {
+    "commander": "^14.0.3"
   }
 }
