--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "scripts": {
     "build": "pnpm -r --if-present run build",
     "test": "pnpm -r --if-present run test",
-    "lint": "pnpm -r --if-present run lint"
+    "lint": "pnpm -r --if-present run lint",
+    "changeset": "changeset",
+    "version-packages": "changeset version",
+    "release:publish": "pnpm -r publish --access public --no-git-checks"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.29.8",
     "@types/node": "^24.3.0",
     "turbo": "^2.5.8",
     "typescript": "^5.9.2",
