--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
+  "bin": {
+    "lunatest-mcp": "./dist/bin/mcp-stdio.js"
+  },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
