--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "build": "pnpm -r --if-present run build",
     "test": "pnpm -r --if-present run test",
     "lint": "pnpm -r --if-present run lint",
+    "docs:dev": "vitepress dev docs --host",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs",
     "changeset": "changeset",
     "version-packages": "changeset version",
     "release:publish": "pnpm -r publish --access public --no-git-checks"
@@ -15,6 +18,7 @@
     "@types/node": "^24.3.0",
     "turbo": "^2.5.8",
     "typescript": "^5.9.2",
+    "vitepress": "^1.6.4",
     "vitest": "^3.2.4"
   }
 }
