--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,14 +20,29 @@ jobs:
           node-version: 24
           cache: pnpm
       - run: pnpm install --frozen-lockfile
-      - run: pnpm -r lint
-      - run: pnpm -r build
-      - run: pnpm -r test
+      - run: pnpm -r --filter=!@lunatest/e2e-tests build
+      - run: pnpm -r --filter=!@lunatest/e2e-tests lint
+      - run: pnpm -r --filter=!@lunatest/e2e-tests test
+
+  e2e-smoke:
+    runs-on: ubuntu-latest
+    needs: quality
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10.30.2
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 24
+          cache: pnpm
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm test:e2e:smoke
 
   performance-regression:
     if: github.event_name == 'pull_request' || github.event_name == 'push'
     runs-on: ubuntu-latest
-    needs: quality
+    needs: [quality, e2e-smoke]
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
