--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,10 +1,14 @@
 {
   "name": "@lunatest/core",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "publishConfig": {
+    "access": "public",
+    "tag": "latest"
+  },
   "dependencies": {
     "wasmoon": "^1.16.0",
     "zod": "^4.1.5"
