--- a/packages/vitest-plugin/package.json
+++ b/packages/vitest-plugin/package.json
@@ -1,10 +1,14 @@
 {
   "name": "@lunatest/vitest-plugin",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "publishConfig": {
+    "access": "public",
+    "tag": "next"
+  },
   "files": [
     "dist"
   ],
