feat(lua-first): Lua 중심 인터셉트와 개발 도구 경로 정합

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -16,6 +16,8 @@
     "lint": "tsc -p tsconfig.json --noEmit"
   },
   "dependencies": {
+    "@lunatest/core": "workspace:*",
+    "@lunatest/runtime-intercept": "workspace:*",
     "commander": "^14.0.3"
   }
 }
