--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "@lunatest/core": "workspace:*",
+    "@lunatest/runtime-intercept": "workspace:*",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
