feat(lua-first): 실행 경로 단일화와 인터셉트 동적 정합

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,6 +10,7 @@
     "tag": "latest"
   },
   "dependencies": {
+    "@lunatest/contracts": "workspace:*",
     "wasmoon": "^1.16.0",
     "zod": "^4.1.5"
   },
