--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@lunatest/core": "workspace:*",
     "@lunatest/runtime-intercept": "workspace:*",
-    "commander": "^14.0.3"
+    "commander": "^14.0.3",
+    "tinyglobby": "^0.2.15"
   }
 }
