--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lunatest/playwright-plugin",
+  "name": "@lunatest/contracts",
   "version": "0.1.0",
   "private": false,
   "type": "module",
@@ -7,14 +7,11 @@
   "types": "./dist/index.d.ts",
   "publishConfig": {
     "access": "public",
-    "tag": "next"
+    "tag": "latest"
   },
   "files": [
     "dist"
   ],
-  "dependencies": {
-    "@lunatest/contracts": "workspace:*"
-  },
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "test": "vitest run",
