chore(packaging): React peer 계약과 CLI 산출물 범위 정렬

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -6,10 +6,15 @@
   "bin": {
     "lunatest": "./dist/index.js"
   },
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "publishConfig": {
     "access": "public",
     "tag": "latest"
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "test": "vitest run",
