--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -14,11 +14,15 @@
   ],
   "dependencies": {
     "@lunatest/core": "workspace:*",
-    "@lunatest/runtime-intercept": "workspace:*",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "@lunatest/runtime-intercept": "workspace:*"
+  },
+  "peerDependencies": {
+    "react": "^18.3.1 || ^19.0.0",
+    "react-dom": "^18.3.1 || ^19.0.0"
   },
   "devDependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1"
   },
