--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "pnpm -r --if-present run test",
     "lint": "pnpm -r --if-present run lint",
     "lint:deadcode": "knip --config knip.json --include files",
+    "pack:check-integrity": "node scripts/check-pack-integrity.mjs",
+    "consumer-smoke:pack": "node scripts/consumer-smoke-pack.mjs",
+    "consumer-smoke:npm": "node scripts/consumer-smoke-npm.mjs",
     "docs:dev": "vitepress dev docs --host",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
@@ -14,8 +17,8 @@
     "test:e2e:extended": "pnpm --filter @lunatest/e2e-tests test:extended",
     "changeset": "changeset",
     "version-packages": "changeset version",
-    "release:publish:stable": "pnpm --filter @lunatest/contracts --filter @lunatest/core --filter @lunatest/cli --filter @lunatest/react --filter @lunatest/mcp publish --access public --no-git-checks --tag latest",
-    "release:publish:next": "pnpm --filter @lunatest/vitest-plugin --filter @lunatest/playwright-plugin --filter @lunatest/runtime-intercept publish --access public --no-git-checks --tag next",
+    "release:publish:stable": "pnpm --filter @lunatest/contracts --filter @lunatest/core --filter @lunatest/runtime-intercept --filter @lunatest/cli --filter @lunatest/react --filter @lunatest/mcp publish --access public --no-git-checks --tag latest",
+    "release:publish:next": "pnpm --filter @lunatest/vitest-plugin --filter @lunatest/playwright-plugin publish --access public --no-git-checks --tag next",
     "release:publish": "pnpm run release:publish:stable && pnpm run release:publish:next",
     "release:publish:dry-run": "pnpm run release:publish:stable --dry-run && pnpm run release:publish:next --dry-run"
   },
