--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,24 @@ jobs:
       - run: pnpm -r --filter=!@lunatest/e2e-tests build
       - run: pnpm -r --filter=!@lunatest/e2e-tests lint
       - run: pnpm -r --filter=!@lunatest/e2e-tests test
+      - run: pnpm lint:deadcode
+      - run: pnpm pack:check-integrity
+
+  consumer-smoke-pack:
+    runs-on: ubuntu-latest
+    needs: quality
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10.30.2
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 24
+          cache: pnpm
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm -r --filter=!@lunatest/e2e-tests build
+      - run: pnpm consumer-smoke:pack
 
   e2e-smoke:
     runs-on: ubuntu-latest
@@ -42,7 +60,7 @@ jobs:
   performance-regression:
     if: github.event_name == 'pull_request' || github.event_name == 'push'
     runs-on: ubuntu-latest
-    needs: [quality, e2e-smoke]
+    needs: [quality, consumer-smoke-pack, e2e-smoke]
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
